# Jornada_de_dados

Aula_03/: exercicio_for.py  exercicio_if.py  exercicio_while.py
Aula_04/: arquivos.py  aula_funcoes.py  exemplo.csv  exemplo_lista.py  exercicios.py  teste_import_funcoes.py
Aula_06/: .flake8  .pre-commit-config.yaml  pyproject.toml  teste.py
