[tool.poetry]
name = "aula-06"
version = "0.1.0"
description = ""
authors = ["Patrick Perez <patrickperez1698@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
